devices/MRE_Controller_Data_Package/WIN64/MT_API.h

#define MT_API extern "C" __declspec( dllexport )
#define MT_API __declspec( dllexport )
MT_API int32_t __stdcall MT_M_Set_Stream_Line_X_Run_Abs(int32_t ADev,uint16_t AObj,int32_t AAxis_Num,int32_t* pAxis,int32_t* pTarget);
//设置圆弧插补主轴及速度
MT_API int32_t __stdcall MT_Set_Stream_Circle_Axis(uint16_t AObj,int32_t Axis_ID0,int32_t Axis_ID1);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_Axis(int32_t ADev,uint16_t AObj,int32_t Axis_ID0,int32_t Axis_ID1);
//设置圆弧插补加速度
MT_API int32_t __stdcall MT_Set_Stream_Circle_Acc(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_Acc(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补减速度
MT_API int32_t __stdcall MT_Set_Stream_Circle_Dec(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_Dec(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补速度
MT_API int32_t __stdcall MT_Set_Stream_Circle_V_Max(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_V_Max(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补启动速度
MT_API int32_t __stdcall MT_Set_Stream_Circle_V_Start(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_V_Start(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补启动 顺时钟  圆心坐标模式
MT_API int32_t __stdcall MT_Set_Stream_Circle_R_CW_Run_Rel(uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_R_CW_Run_Rel(int32_t ADev,uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_Set_Stream_Circle_R_CW_Run_Abs(uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_R_CW_Run_Abs(int32_t ADev,uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
//设置圆弧插补启动 逆时钟   圆心坐标
MT_API int32_t __stdcall MT_Set_Stream_Circle_R_CCW_Run_Rel(uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_R_CCW_Run_Rel(int32_t ADev,uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_Set_Stream_Circle_R_CCW_Run_Abs(uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_R_CCW_Run_Abs(int32_t ADev,uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);
//设置圆弧插补停止
MT_API int32_t __stdcall MT_Set_Stream_Circle_Stop(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_Stop(int32_t ADev,uint16_t AObj);
//设置圆弧插补急停
MT_API int32_t __stdcall MT_Set_Stream_Circle_Halt(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Stream_Circle_Halt(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Stream_Wait_Line(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Stream_Wait_Line(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Stream_Wait_Circle(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Stream_Wait_Circle(int32_t ADev,uint16_t AObj);
//设置单通道值
MT_API int32_t __stdcall MT_Set_Stream_OC_Out_Single(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_OC_Out_Single(int32_t ADev,uint16_t AObj,int32_t Value);
//设置所有通道值
MT_API int32_t __stdcall MT_Set_Stream_OC_Out_All(int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_OC_Out_All(int32_t ADev,int32_t Value);
//设置单通道值
MT_API int32_t __stdcall MT_Set_Stream_Optic_Out_Single(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Optic_Out_Single(int32_t ADev,uint16_t AObj,int32_t Value);
//设置所有通道值
MT_API int32_t __stdcall MT_Set_Stream_Optic_Out_All(int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Optic_Out_All(int32_t ADev,int32_t Value);
//减速功能
MT_API int32_t __stdcall MT_Set_Stream_Dec_Enable(void);
MT_API int32_t __stdcall MT_M_Set_Stream_Dec_Enable(int32_t ADev);
MT_API int32_t __stdcall MT_Set_Stream_Dec_Disable(void);
MT_API int32_t __stdcall MT_M_Set_Stream_Dec_Disable(int32_t ADev);
//2016 08 20 增加等待输入功能
//等待Optic_In状态
MT_API int32_t __stdcall MT_Set_Stream_Wait_Optic_In(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Wait_Optic_In(int32_t ADev,uint16_t AObj,int32_t Value);
//启动Stream,带密码校验功能
MT_API int32_t __stdcall MT_Set_Stream_Run_Check(void);
MT_API int32_t __stdcall MT_M_Set_Stream_Run_Check(int32_t ADev);
//2019 09 15 running id for UI
MT_API int32_t __stdcall MT_Set_Stream_Run_ID(int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Stream_Run_ID(int32_t ADev,int32_t Value);
MT_API int32_t __stdcall MT_Get_Stream_Run_ID(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Stream_Run_ID(int32_t ADev,int32_t* pValue);
//编码器功能
MT_API int32_t __stdcall MT_Get_Encoder_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Encoder_Num(int32_t ADev,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Encoder_Pos(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Encoder_Pos(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_Encoder_Pos(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Encoder_Pos(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Encoder_Z_Polarity(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Encoder_Z_Polarity(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Encoder_Dir_Polarity(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Encoder_Dir_Polarity(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_Encoder_Index_Line_Count(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Encoder_Index_Line_Count(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_Encoder_Over_Enable(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Encoder_Over_Enable(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Encoder_Over_Max(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Encoder_Over_Max(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Encoder_Over_Stable(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Encoder_Over_Stable(int32_t ADev,uint16_t AObj,int32_t Value);